<resources>
    <string name="app_name">PhoenicNest</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="button">Button</string>
    <string name="signin">Sign in</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="category">Category</string>
    <string name="popular">Popular</string>
    <string name="new_it">New</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_profile">My Profile</string>
    <string name="my_apps">My Apps</string>
    <string name="downloads">Downloads</string>
    <string name="notifications">Notifications</string>
    <string name="log_out">Log Out</string>

    <string name="download">Download</string>
    <string name="harry_potter">Harry Potter</string>
    <string name="description">Description</string>
    <string name="todo">TODO</string>
    <string name="todo_1">TODO</string>
    <string name="todo_2">TODO</string>
    <string name="change_picture">Change Picture</string>
    <string name="save_changes">Save Changes</string>
    <string name="reset_password">Reset Password</string>
    <string name="change_email">Change Email</string>
    <string name="name">Name</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="year">Year</string>
    <string name="month">Month</string>
    <string name="day">Day</string>
    <string name="newpassword">New Password</string>
    <string name="oldpassword">Old Password</string>
    <string name="new_email">New Email</string>
    <string name="publish_an_app">Publish an App</string>
    <string name="title">Title</string>
    <string name="Publish_new_app">Publish New App</string>
    <string name="create_a_app">Create a App</string>
    <string name="app_title">App Title</string>
    <string name="pakage_structure">Package Structure</string>
    <string name="next">Next</string>
    <string name="cancel">Cancel</string>
    <string name="app_icon">App Icon</string>
    <string name="app_banner">App Banner</string>
    <string name="new_release">New Release</string>
    <string name="version">Version</string>
    <string name="version_code">Version Code</string>
    <string name="screen_shots">Screenshots</string>
    <string name="previous">Previous</string>
    <string name="publish">Publish</string>
    <string name="add_apk_file">Add Apk FIle</string>
    <string name="no_file_selected">No FIle Selected</string>
    <string name="channelName">MessageChannel</string>
    <string name="channelDescription">Display Clickable Messages</string>


</resources>