<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:flow_horizontalAlign="center"
    app:flow_verticalAlign="center"
    tools:context="com.phoenix.phoenixNest.DrawerFragmernt">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/guesture_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/blue_squire"
            android:backgroundTint="#03A9F4"
            android:orientation="vertical"
            android:padding="10dp"
            android:textAlignment="center"
            app:flow_horizontalAlign="center"
            app:flow_verticalAlign="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.473"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/homeButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/blue_squire"
                    android:contentDescription="@string/todo"
                    android:padding="5dp"
                    android:src="@drawable/home"
                    tools:ignore="ImageContrastCheck,DuplicateSpeakableTextCheck,TouchTargetSizeCheck" />

                <Space
                    android:layout_width="20dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0" />

                <ImageButton
                    android:id="@+id/more"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/blue_squire"
                    android:contentDescription="@string/todo_1"
                    android:padding="5dp"
                    android:src="@drawable/menu"
                    tools:ignore="ImageContrastCheck,TouchTargetSizeCheck" />

                <Space
                    android:layout_width="20dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0" />

                <ImageButton
                    android:id="@+id/search"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/blue_squire"
                    android:contentDescription="@string/todo_2"
                    android:padding="5dp"
                    android:src="@drawable/search"
                    tools:ignore="ImageContrastCheck,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/mainContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/blue_squire">

                <LinearLayout
                    android:id="@+id/UserContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.036">

                    <TextView
                        android:id="@+id/myprofile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/my_profile"
                        android:textAlignment="center"
                        android:textColor="#FFFFFF"
                        android:textColorHint="#FFFFFF"
                        tools:ignore="TextContrastCheck" />

                    <TextView
                        android:id="@+id/myapps"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:text="@string/my_apps"
                        android:textAlignment="center"
                        android:textColor="#FFFFFF"
                        android:textColorHint="#FFFFFF"
                        tools:ignore="TextContrastCheck" />

                    <TextView
                        android:id="@+id/textView21"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:text="@string/downloads"
                        android:textAlignment="center"
                        android:textColor="#FFFFFF"
                        android:textColorHint="#FFFFFF"
                        tools:ignore="TextContrastCheck" />

                    <TextView
                        android:id="@+id/textView22"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/notifications"
                        android:textAlignment="center"
                        android:textColor="#FFFFFF"
                        android:textColorHint="#FFFFFF"
                        tools:ignore="TextContrastCheck" />
                </LinearLayout>

                <Button
                    android:id="@+id/logout"
                    android:layout_width="wrap_content"
                    android:layout_height="38dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/blue_squire"
                    android:text="@string/log_out"
                    android:textColor="#000000"
                    app:backgroundTint="#FFFFFF"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/UserContainer"
                    app:layout_constraintVertical_bias="1.0"
                    tools:ignore="TouchTargetSizeCheck" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>