<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blue_squire"
    android:backgroundTint="#FFFFFF"
    android:padding="10dp"
    tools:context="com.phoenix.phoenixNest.EmailChangeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/textView37"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="50dp"
            android:layout_weight="1"
            android:text="@string/change_email"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/emailresemail"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:ems="10"
            android:hint="@string/new_email"
            android:inputType="textEmailAddress" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_weight="1" />

        <EditText
            android:id="@+id/emailrespassword"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/resetEmail"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:background="@drawable/button_blue"
            android:backgroundTint="@null"
            android:text="@string/change_email" />
    </LinearLayout>
</FrameLayout>