<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main"
    tools:context="com.phoenix.phoenixNest.AppRelseaseFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:visibility="visible">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView43"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/new_release"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.045"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView44"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/version"
                android:textColor="#FFFFFF"
                app:layout_constraintStart_toStartOf="@+id/testB"
                app:layout_constraintTop_toBottomOf="@+id/testB" />

            <TextView
                android:id="@+id/textView47"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/add_apk_file"
                android:textColor="#FFFFFF"
                app:layout_constraintEnd_toEndOf="@+id/textView43"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/textView43"
                app:layout_constraintTop_toBottomOf="@+id/ErrorMessageAppRelease" />

            <EditText
                android:id="@+id/versionText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/border"
                android:backgroundTint="@color/white"
                android:editable="false"
                android:ems="10"
                android:enabled="false"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/textView44"
                app:layout_constraintTop_toBottomOf="@+id/textView44" />

            <TextView
                android:id="@+id/textView45"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/version_code"
                android:textColor="#FFFFFF"
                app:layout_constraintEnd_toEndOf="@+id/versionText"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/versionText"
                app:layout_constraintTop_toBottomOf="@+id/versionText" />

            <TextView
                android:id="@+id/textView46"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/screen_shots"
                android:textColor="#FFFFFF"
                app:layout_constraintEnd_toEndOf="@+id/vetsionCodeText"
                app:layout_constraintHorizontal_bias="0.013"
                app:layout_constraintStart_toStartOf="@+id/vetsionCodeText"
                app:layout_constraintTop_toBottomOf="@+id/vetsionCodeText" />

            <EditText
                android:id="@+id/vetsionCodeText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/border"
                android:backgroundTint="@color/white"
                android:editable="false"
                android:ems="10"
                android:enabled="false"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="@+id/versionText"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/textView45"
                app:layout_constraintTop_toBottomOf="@+id/textView45" />

            <HorizontalScrollView
                android:id="@+id/scrollView3"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/light_button"
                android:backgroundTint="@color/white"
                app:layout_constraintEnd_toEndOf="@+id/vetsionCodeText"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/textView46"
                app:layout_constraintTop_toBottomOf="@+id/textView46">

                <LinearLayout
                    android:id="@+id/SS"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"></LinearLayout>
            </HorizontalScrollView>

            <Button
                android:id="@+id/publish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginTop="16dp"
                android:layout_marginBottom="100dp"
                android:background="@drawable/button"
                android:text="@string/publish"
                android:textColor="@drawable/button_text_color"
                app:backgroundTint="@null"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/scrollView3"
                app:layout_constraintTop_toBottomOf="@+id/AddSs"
                app:layout_constraintVertical_bias="0.0" />

            <Button
                android:id="@+id/prev"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginEnd="8dp"
                android:layout_marginBottom="100dp"
                android:background="@drawable/button"
                android:text="@string/previous"
                android:textColor="@drawable/button_text_color"
                app:backgroundTint="@null"
                app:layout_constraintBottom_toBottomOf="@+id/canclePublish"
                app:layout_constraintEnd_toStartOf="@+id/canclePublish"
                app:layout_constraintTop_toTopOf="@+id/canclePublish"
                app:layout_constraintVertical_bias="0.0" />

            <Button
                android:id="@+id/canclePublish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="100dp"
                android:background="@drawable/light_button"
                android:text="@string/cancel"
                android:textColor="@drawable/light_button_text"
                app:backgroundTint="@null"
                app:layout_constraintBottom_toBottomOf="@+id/publish"
                app:layout_constraintEnd_toStartOf="@+id/publish"
                app:layout_constraintTop_toTopOf="@+id/publish"
                app:layout_constraintVertical_bias="0.0" />

            <ImageButton
                android:id="@+id/AddSs"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/light_button"
                app:layout_constraintEnd_toEndOf="@+id/scrollView3"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/scrollView3"
                app:layout_constraintTop_toBottomOf="@+id/scrollView3"
                tools:src="@drawable/baseline_add_24" />

            <ImageButton
                android:id="@+id/testB"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/light_button_default"
                android:src="@drawable/baseline_add_24"
                app:layout_constraintStart_toStartOf="@+id/textView47"
                app:layout_constraintTop_toBottomOf="@+id/textView47" />

            <TextView
                android:id="@+id/fileText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/no_file_selected"
                android:textColor="#FFFFFF"
                app:layout_constraintBottom_toBottomOf="@+id/testB"
                app:layout_constraintStart_toEndOf="@+id/testB"
                app:layout_constraintTop_toTopOf="@+id/testB"
                app:layout_constraintVertical_bias="0.509" />

            <TextView
                android:id="@+id/ErrorMessageAppRelease"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView43" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</FrameLayout>